src/Tests/Error/TypeIntError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeIntError extends AssertError
{
}
